--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{report}
 
 \usepackage{subfiles}
+\usepackage[open,openlevel=1]{bookmark}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{centernot}
