--- a/search.tex
+++ b/search.tex
@@ -53,7 +53,7 @@
 }
 \newcommand{\searchableSubsection}[3]{
 	\searchResult{#2}{
-		\subsection*{#1 \tags{#2}}
+		\subsection{#1}\tags{#2}\\
 			{#3}
 	}
 }
