Notes about LSE Groups exercises.

--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -34,6 +34,9 @@
 
 
 \titleformat*{\subparagraph}{\small\bfseries}
+\urlstyle{same}
+
+%\graphicspath{{}} (why does this not work?)
 
 % default formatting for code listings
 \lstset{ % docs: https://en.wikibooks.org/wiki/LaTeX/Source_Code_Listings
@@ -55,6 +58,7 @@
 \newcommand{\divides}{\mid}
 \newcommand{\notdivides}{\nmid}
 \newcommand{\eqand}{\hspace{10pt}\text{and}\hspace{10pt}}
+\newcommand{\modulo}[1]{\;(\bmod\; #1)}
 
 
 \newcommand{\wrong}{\begingroup\color{red}\text{Wrong!}\endgroup}
