Completed notes on LSE Subgroups exercises.

--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -74,9 +74,11 @@
 \DeclareRobustCommand{\inv}[1]{{#1}^{-1}}
 \DeclareRobustCommand{\logicsep}{\;.\;}
 
+\newcommand{\bigsetc}[2]{\left\{#1\; \middle\vert \;#2\right\}}
 \newcommand{\abs}[1]{\left\lvert#1\right\rvert}
 \newcommand{\cardinality}{\abs}
 \newcommand{\norm}{\abs}
+\newcommand{\congruent}[2]{\equiv #1 \modulo{#2}}
 
 \newcommand*{\V}[1]{\vec{\bm{#1}}}
 \newcommand{\dotsuchthat}{\;\cdot\;}
