Change name of 'Abstract Algebra.tex' to Algebra.tex.

--- a/Algebra.tex
+++ b/Algebra.tex
@@ -8,12 +8,10 @@
 
 \begin{document}
 
-\chapter{Algebra}
-\searchableSubsection{\chapterTitle{Algebra}}{abstract algebra, complex numbers}{\bigskip\bigskip}
+\searchableChapter{Algebra}{abstract algebra, complex numbers}
 
-	\searchableSubsection{\sectionTitle{Abstract Algebra}}{abstract algebra}{\bigskip}
+	\searchableSection{Abstract Algebra}{abstract algebra}
 	
-	\bigskip\bigskip
 	\searchableSubsection{Groups}{abstract algebra}{\bigskip
 		
 		\boxeddefinition{
@@ -1225,9 +1223,8 @@
 	
 	
 	\pagebreak
-	\searchableSubsection{\sectionTitle{Fields}}{abstract algebra}{\bigskip}
+	\searchableSection{Fields}{abstract algebra}
 		
-		\bigskip
 		\searchableSubsection{Complex Numbers}{abstract algebra, complex numbers}{\bigskip
 			\labeledProposition{For every $\alpha \in \C{}$, there exists a unique $\beta \in \C{}$ such that $\alpha + \beta = 0$.}{unique_complex_additive_inverse}
 			\begin{proof}
