--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -149,7 +149,7 @@
 
 \begin{document}
 \maketitle
-\subfile{"Abstract Algebra"}
+\subfile{"Algebra"}
 \newpage
 \subfile{"Number Theory"}
 \newpage
